# bimdiff

./: .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml
src/bimdiff/: __init__.py  cli.py  differ.py  filters.py  models.py  reporter.py
src/bimdiff/_engine/: __init__.py  caches.py  comparators.py  extractor.py  geometry.py  summary.py
src/bimdiff/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_differ.py  test_filters.py  test_reporter.py
tests/fixtures/: added_props_v1.ifc  added_props_v2.ifc  duplicate_guid.ifc  empty.ifc  generate_fixtures.py  identical.ifc  material_v1.ifc  material_v2.ifc  simple_v1.ifc  simple_v2.ifc
